# StudyTest

./: .gitignore  README.md
BasicSum/: BasicSum.sln
BoostTest/: BoostTest.sln
C++Test/: C++Test.sln
Complier/: SimpleSection.cpp  SpecialSymbol.cpp  fork.h
Concurrency/: Concurrency.sln
DataStruct/: DataStruct.sln
DesignModel/: CMakeLists.txt  DesignModel.sln
DesignModel/Debug/: DesignModel.ilk
DesignModel/DesignModel/: AbstractFactory.h  Bridge.h  ChainOfResponsibility.h  Command.h  Composite.h  DesignModel.cpp  DesignModel.vcxproj  DesignModel.vcxproj.filters  ForTest.cpp  ForTest.h  Functor.h  Interpreter.h  Iterator.h  Mediator.cpp  Mediator.h  MemAlloc.cpp  MemAlloc.h  Memento.h  Observer.h  Proxy.h  Singletons.cpp  Singletons.h  SmartPtr.h  State.h  Strategy.h  TemplateMethod.h  TypeInfo.h  common.h  decorator.h  factory.h  policy.h  static_check.h  typelist.h  typetraits.h  visitable.h  visitor.h
DesignModel/DesignModel/Debug/: DesignModel.exe.recipe  vc142.idb
DesignModel/DesignModel/Debug/DesignModel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DesignModel.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DesignModel/DesignModel/x64/Debug/: DesignModel.exe.recipe  vc142.idb
DesignModel/DesignModel/x64/Debug/DesignModel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DesignModel.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DesignModel/doc/: 类图.vsdx
DesignModel/x64/Debug/: DesignModel.ilk
Exception/: Exception.sln
IOStream/: IOStream.sln
IteratorTest/: IteratorTest.sln
(+341 files in other folders)
